<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_window_background"
    tools:context=".VolunteerLoginActivity"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.mredrock.cyxbs.common.component.JCardViewPlus
            android:id="@+id/jcv_volunteer_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/common_window_background"
            app:cardCornerRadius="2dp"
            app:horizontalContentPadding="25dp"
            app:shadowColor="@color/common_window_background"
            app:shadowRadius="10dp"
            app:verticalContentPadding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_volunteer_account"
                    style="@style/VolunteerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:background="@null"
                    android:drawableStart="@drawable/volunteer_ic_account"
                    android:hint="@string/volunteer_hint_input_account"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/et_volunteer_password"
                    style="@style/VolunteerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:drawableStart="@drawable/volunteer_ic_pwd"
                    android:hint="@string/volunteer_hint_input_pwd"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />
            </LinearLayout>
        </com.mredrock.cyxbs.common.component.JCardViewPlus>

        <Button
            android:id="@+id/btn_volunteer_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/volunteer_shape_btn_login"
            android:text="@string/volunteer_login"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/volunteer_login" />
</FrameLayout>
