<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_window_background">


    <!--    <LinearLayout-->
    <!--        android:id="@+id/fl_volunteer_time"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="40dp"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/volunteer_guideline"-->
    <!--        app:layout_constraintHorizontal_bias="1"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_volunteer_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/impact_min"
        android:orientation="horizontal"
        android:textColor="@color/levelFourFontColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_volunteer_time_text"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="18" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_volunteer_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/volunteer_string_time"
        android:textColor="@color/levelFourFontColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_volunteer_total_time"
        app:layout_constraintEnd_toStartOf="@+id/volunteer_guideline"
        app:layout_constraintTop_toTopOf="@id/tv_volunteer_total_time"
        app:layout_constraintVertical_bias="0.7" />
    <!--    </LinearLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/volunteer_string_all_time_text"
        android:textColor="@color/common_level_three_font_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_volunteer_total_time"
        app:layout_constraintStart_toStartOf="@id/tv_volunteer_total_time"
        app:layout_constraintTop_toBottomOf="@id/tv_volunteer_total_time" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_volunteer_total_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/impact_min"
        android:textColor="@color/levelFourFontColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/volunteer_guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="18" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:text="@string/volunteer_string_times_text"
        android:textColor="@color/levelFourFontColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_volunteer_total_times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/tv_volunteer_total_times"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/volunteer_string_times"
        android:textColor="@color/common_level_three_font_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_volunteer_total_times"
        app:layout_constraintStart_toStartOf="@id/tv_volunteer_total_times"
        app:layout_constraintTop_toBottomOf="@id/tv_volunteer_total_times" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/volunteer_guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/volunteer_guideline2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>