<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_window_background"
    tools:context=".VolunteerLoginActivity"
    tools:ignore="ResourceName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/volunteer_ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_toRightOf="@+id/iv_back"
                android:text="志愿查询"
                android:textColor="@color/common_level_three_font_color"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:text="绑定志愿账号"
            android:textColor="@color/common_level_three_font_color"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/volunteer_ic_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_volunteer_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:gravity="bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_volunteer_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/volunteer_hint_input_account"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/common_level_three_font_color"
                    android:textColorHint="@color/common_main_activity_login_et_hint_color"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_ic_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/volunteer_ic_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_volunteer_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:gravity="bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_volunteer_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:imeOptions="actionGo"
                    android:background="@null"
                    android:hint="@string/volunteer_hint_input_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/common_level_three_font_color"
                    android:textColorHint="@color/common_main_activity_login_et_hint_color"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_volunteer_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/common_toolbar_background"
            android:text="@string/volunteer_login"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/volunteer_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        android:text="部分信息来源：中国志愿服务网"
        android:textColor="@color/common_alpha_forty_level_two_font_color"
        android:textSize="11sp" />
</FrameLayout>
